Update and rename 2025-12-05-Docker-Intro.md to 2025-12-05-gcp-Intro.md

--- a/_posts/gcp/2025-12-05-gcp-Intro.md
+++ b/_posts/gcp/2025-12-05-gcp-Intro.md
@@ -1,8 +1,8 @@
 ---
 layout: single
-title: Introduction to Dockers
+title: Introduction to GCP
 date: 2025-12-05
-categories: [DOCKER]
+categories: [GCP]
 tags: [Fundamentals]
 ---
 
